[tool.poetry]
name = "stoobly_orator"
version = "0.10.0"
description = "The Orator ORM provides a simple yet beautiful ActiveRecord implementation."

license = "MIT"

authors = [
    "Matthew Le <michael@stoobly.com>"
]

readme = 'README.rst'

repository = "https://github.com/Stoobly/orator.git"
homepage = "https://orator-orm.com/"

keywords = ['database', 'orm']


[tool.poetry.dependencies]
python = "^3.10"
backpack = "^0.1"
blinker = "^1.4"
cleo = "^2.1"
inflection = "^0.3"
Faker = "^0.8"
lazy-object-proxy = "^1.2"
pendulum = "^1.4"
pyaml = "^16.12"
pyyaml = "^6.0.1"
Pygments = "^2.2"
simplejson = "^3.10"
six = "^1.10"
wrapt = "^1.10"

# Extras
psycopg2 = { version = "^2.7", optional = true }
PyMySQL = { version = "^1.0", optional = true }
mysqlclient = { version = "^1.3", optional = true }


[tool.poetry.group.dev.dependencies]
flexmock = "^0.13.0"
pytest = "^7.0"
pytest-mock = "^3.0"
tox = "^3.5"
pre-commit = "^1.11"
psycopg2-binary = "^2.7"
PyMySQL = "^1.0"
cryptography = ">=3.4"


[tool.poetry.extras]
mysql = ["mysqlclient"]
mysql-python = ["PyMySQL"]
pgsql = ["psycopg2"]


[tool.poetry.scripts]
orator = 'orator.commands.application:application.run'


[build-system]
requires = ["poetry>=0.12a3"]
build-backend = "poetry.masonry.api"
